Close streams properly during analytics plugin asset serving